--- a/blockchainframeworks.tex
+++ b/blockchainframeworks.tex
@@ -34,10 +34,10 @@ The interesting aspect of Ethereum, however, is that the code from these applica
 
 At the moment, Ethereum is still using PoW as the consensus protocol, in a similar fashion to Bitcoin. There are projects currently trying to move Ethereum to PoS, such as Casper~\cite{Buterin2017}. PoS is a consensus protocol with a different paradigm, in which the block mining process is roughly based on trust, on the fact that the miner has a certain stake or investment (like cryptocurrency) in the network, and so it is in their best benefit to be an honest node. 
 
-The benefit of PoS over PoW is that there isn't as much "waste" of computational power as in PoW. In PoW, miners have to intensively search for a target number, which allows them to claim the block as their own. This serves no other scientific or practical purpose other than making the mining process hard, and, as soon as a node successfully mines a block, all the energy used  by all the other mining nodes that were in this process basically goes to waste~\cite{Buterin2013}. There are other concerns that make a PoS system like Casper a better option as well, such as performance concerns. 
+The benefit of PoS over PoW is that there is not as much "waste" of computational power as in PoW. In PoW, miners have to intensively search for a target number, which allows them to claim the block as their own. This serves no other scientific or practical purpose other than making the mining process hard, and, as soon as a node successfully mines a block, all the energy used  by all the other mining nodes that were in this process basically goes to waste~\cite{Buterin2013}. There are other concerns that make a PoS system like Casper a better option as well, such as performance concerns. 
 
 %{fcorreia: to call it "waste" is a bit strong, as this is a mechanism that fulfill a specific purpose (i.e., the "work" is suppose to have an increasing difficulty for the network to work). I do agree that other alternatives can be more computationally and energetically efficient though, and that this is ever more important as the use of these platforms increases, as so does the cost (financial, environmental, etc).}
-%It's still wasted power, it has no other purpose than artificially limiting each node's influence (while there are other mechanisms  which do the same and don't use any power). The computation itself just finds a nonce that serves no other purpose. If we were talking about Primecoin or other applications which use PoW to find nonces which are prime numbers and so on, then it would not  be a waste.
+%It's still wasted power, it has no other purpose than artificially limiting each node's influence (while there are other mechanisms  which do the same and do not use any power). The computation itself just finds a nonce that serves no other purpose. If we were talking about Primecoin or other applications which use PoW to find nonces which are prime numbers and so on, then it would not  be a waste.
 
 
 \subsubsection{Performance and Scalability Issues}
@@ -49,7 +49,7 @@ Ever since its conception, there has been concern as to whether Ethereum's \text
 
 These concerns are also very much valid for the case of supply chains. If Ethereum were to be integrated with a supply chain, by using smart contracts, one of the most important factors to take into account would be exactly the performance and scalability of the system. It is important to note, though, that private and public blockchains have different performances as well as different scalability concerns. Furthermore, certain values that affect the performance (such as the block time) also have an affect on the scalability, and consequently, on the security (a blockchain with a lot of nodes is more secure than one with fewer, for instance). This means that these attributes are interdependent and require a fine balance. It is important to mention that it is possible to deploy a network for Ethereum separate from the main network, so that it runs on a separate number of nodes and so that the network could have some of its values customized. However, such a network will still be public, like the main network already is, suffering from most of the same issues.
 
-In a public chain, security is a much bigger concern, as there are many different kinds of attacks, and the blockchain's values, such as the block size, are balanced in a way that tries to prevent these. Such values can easily be adjusted in a private chain, in ways they can't in a public chain, where they would cause forks, clog the chain or raise security issues. In addition, private blockchain deployments are usually more centralized, concentrating their power in fewer nodes, as there is an inherent sense of trust from within the network. For this very reason, this type of blockchain is more easily scalable as well.
+In a public chain, security is a much bigger concern, as there are many different kinds of attacks, and the blockchain's values, such as the block size, are balanced in a way that tries to prevent these. Such values can easily be adjusted in a private chain, in ways they can not in a public chain, where they would cause forks, clog the chain or raise security issues. In addition, private blockchain deployments are usually more centralized, concentrating their power in fewer nodes, as there is an inherent sense of trust from within the network. For this very reason, this type of blockchain is more easily scalable as well.
 
 
 
@@ -120,7 +120,7 @@ This was a simple architecture, but it has several liabilities when used in a pe
 A detailed architectural specification of Fabric's revised version 1.1 can be found in the documentation section of Fabric's website~\cite{FabricDocArch}~\cite{IBMResearch2017}. Other articles have been produced by IBM researchers~\cite{Cachin2016}~\cite{Vukolic2017}, as well as numerous presentations, detailing the general architectural problems and solutions of this technology.
 
 This revised version follows instead an "Execute-Order-Validate" implementation, which tackles the above mentioned issues, and, according to Fabric's documentation, the advantages this reviewed architecture brings are \textbf{scalability}, \textbf{confidentiality}, \textbf{consensus modularity} and \textbf{chaincode trust flexibility}.
-%I do not really understand the term they use "chaincode trust flexibility", it just looks like they didn't know how to name the characteristic and made something up...
+%I do not really understand the term they use "chaincode trust flexibility", it just looks like they did not know how to name the characteristic and made something up...
 
 \subsubsection{System Architecture and Consensus}
 \label{hyperledger_architecture}
@@ -244,7 +244,7 @@ Composer also has configuration files for some of Fabric's properties. It posses
 \subsection{Corda}
 Corda's take on blockchains vastly differs from Ethereum or Hyperledger. Traditionally, banks have their own ledger, but Corda wants to unify these ledger's into one, claiming that it improves the cost and efficiency. Corda focuses solely on providing a distributed ledger for financial services, where financial agreements can be recorded and managed, available to any financial institution\cite{Brown2016}. 
 
-This is a very specific purpose, which means that Corda's application on Supply Chains would be rather limited, to fixing payments and agreements, perhaps. Even Corda's own smart contracts are pretty limited in what they allow, in comparison to Ethereum's, since they don't allow for all the freedom of computation. In theory, Corda is limited to the financial and legal contracts domain, with the functionality for custom contracts being very limited.
+This is a very specific purpose, which means that Corda's application on Supply Chains would be rather limited, to fixing payments and agreements, perhaps. Even Corda's own smart contracts are pretty limited in what they allow, in comparison to Ethereum's, since they do not allow for all the freedom of computation. In theory, Corda is limited to the financial and legal contracts domain, with the functionality for custom contracts being very limited.
 
 \begin{figure}[h]
 \centering
@@ -276,7 +276,7 @@ As with Ethereum, Corda also uses a virtual machine. In this case it is the Java
 Comparison's between these three platforms are recurrent, though Hyperledger and Corda might have more in common with each other than with Ethereum. 
 Valenta~\cite{Valenta2017} concisely describes the main points of difference between these frameworks, with a focus on the consensus process and general characteristics of the frameworks. 
 
-He concluded that Ethereum is more of a general purpose platform, while Fabric tries a different solution, adaptable to a different set of problems. Fabric is flexible and customizable in ways that the other frameworks aren't. On the other end, Corda  was designed with one specific application in mind, financial services, and it is rigid in that sense, which actually made its architecture a lot more simple compared to Fabric's. It is also arguable that Hyperledger can be tailored to resemble Corda, due to its modularity, as Corda is not really a competitor of Hyperledger, but rather a complement. 
+He concluded that Ethereum is more of a general purpose platform, while Fabric tries a different solution, adaptable to a different set of problems. Fabric is flexible and customizable in ways that the other frameworks are not. On the other end, Corda  was designed with one specific application in mind, financial services, and it is rigid in that sense, which actually made its architecture a lot more simple compared to Fabric's. It is also arguable that Hyperledger can be tailored to resemble Corda, due to its modularity, as Corda is not really a competitor of Hyperledger, but rather a complement. 
 
 \paragraph{Hyperledger vs Corda} In one sense, Corda has more of an out-of-the box experience, while with Fabric, the logic would have to be implemented. Composer does make Fabric more user-friendly, but it is still hard to setup and configure, compared to Corda. It all comes down to what kind of system we want to build, and what are its the final objectives, functionalities and requirements.
 
