--- a/introduction.tex
+++ b/introduction.tex
@@ -85,7 +85,7 @@ One area in particular where we believe blockchain could bring about great impro
 
 \section{Motivation} \label{sec:motivation}
 
-As described in section 1.3, these problems are caused by the use of software that can't keep up with the evolution of the supply chains. It is either outdated or inadequate software by itself, and even when the software works just fine, it wasn't specified to allow for the integration of a whole chain. There is an immediate need for better solutions. New and better solutions might not completely replace the previous ones, but, rather, add to them.
+As described in section 1.3, these problems are caused by the use of software that can not keep up with the evolution of the supply chains. It is either outdated or inadequate software by itself, and even when the software works just fine, it was not specified to allow for the integration of a whole chain. There is an immediate need for better solutions. New and better solutions might not completely replace the previous ones, but, rather, add to them.
 
 One way to approach these specific problems that are caused by the traditional IT solutions is to update them with the use of new technologies, namely by taking what already exists and integrating it with blockchain technology. The characteristics of blockchain would allow for many of the identified problems to be reduced or neutralized. Blockchains are the perfect means to achieve traceability of a supply chain, and so, they are good to achieve provenance as well. At the same time they are a secure, incorruptible and immutable way to store information, with a fast synchronization time, being perpetually available to anyone who has permission, anywhere within the network. It would also be the way to close the analog gaps, turning the chain fully digital, leading to the possibility of a global overview.
 
