--- a/prototype/prototype4.tex
+++ b/prototype/prototype4.tex
@@ -154,6 +154,6 @@ Some of the Composer framework limitations found that impacted the development o
 	\item The run-time API does not have methods to access transactions, so that past transactions from the registry can be interacted with in the script file.
 	\item Some access control rules might be impossible to apply to certain queries. 
 	\item The framework is still in development and has some bugs. For instance, \textit{LIMIT} in queries is bugged and does not work. Sometimes, when an asset is deleted, a new asset with the same ID as the previous can not be created, because the system thinks the previous asset still exists.
-	\item Organizations aren't supported in Composer in the same way they are in fabric.
+	\item Organizations are not supported in Composer in the same way they are in fabric.
 	\item Composer somewhat lacks integrity checks when references to instances of other objects are used.
 \end{itemize}
