--- a/references.bib
+++ b/references.bib
@@ -214,7 +214,7 @@ abstract = {I have long felt that, because it was posed as a cute problem about 
 
 There is a problem in distributed computing that is sometimes called the Chinese Generals Problem, in which two generals have to come to a common agreement on whether to attack or retreat, but can communicate only by sending messengers who might never arrive. I stole the idea of the generals and posed the problem in terms of a group of generals, some of whom may be traitors, who have to reach a common decision. I wanted to assign the generals a nationality that would not offend any readers. At the time, Albania was a completely closed society, and I felt it unlikely that there would be any Albanians around to object, so the original title of this paper was The Albanian Generals Problem. Jack Goldberg was smart enough to realize that there were Albanians in the world outside Albania, and Albania might not always be a black hole, so he suggested that I find another name. The obviously more appropriate Byzantine generals then occurred to me.
 
-The main reason for writing this paper was to assign the new name to the problem. But a new paper needed new results as well. I came up with a simpler way to describe the general 3n+1-processor algorithm. (Shostak's 4-processor algorithm was subtle but easy to understand; Pease's generalization was a remarkable tour de force.) We also added a generalization to networks that were not completely connected. (I don't remember whose work that was.) I also added some discussion of practical implementation details.},
+The main reason for writing this paper was to assign the new name to the problem. But a new paper needed new results as well. I came up with a simpler way to describe the general 3n+1-processor algorithm. (Shostak's 4-processor algorithm was subtle but easy to understand; Pease's generalization was a remarkable tour de force.) We also added a generalization to networks that were not completely connected. (I do not remember whose work that was.) I also added some discussion of practical implementation details.},
 publisher = {},
 url = {https://www.microsoft.com/en-us/research/publication/byzantine-generals-problem/},
 address = {},
@@ -584,3 +584,12 @@ keywords={formal specification;IEEE Std 830-1998;IEEE recommended practice;IEEE/
 doi={10.1109/IEEESTD.1998.88286}, 
 ISSN={}, 
 month={Oct},}
+
+@article{Clervi2015,
+author = {Clervi, Anthony},
+file = {:C$\backslash$:/Users/PedroCosta/AppData/Local/Mendeley Ltd./Mendeley Desktop/Downloaded/91a87dd35695d70632ab0541cd592446c32aecb2.html:html},
+journal = {Supply {\&} Demand Chain Executive},
+title = {{Cloud Computing Is Transforming Supply Chain Management}},
+url = {https://www.sdcexec.com/sourcing-procurement/article/12125647/cloud-computing-is-transforming-supply-chain-management},
+year = {2015}
+}
