--- a/survey/survey2.tex
+++ b/survey/survey2.tex
@@ -29,7 +29,7 @@ After inquiring about the blockchain knowledge of the respondents, some affirmat
 \item Blockchains can be useful in some uses cases, independently of whether they hold a cryptocurrency or not.
 \end{enumerate}
 
-Independently, these affirmations don't hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
+Independently, these affirmations do not hold an absolute value that can help ascertain if there is a need for a cryptocurrency in the case of supply chain. But together, the three affirmations lead to a higher degree of certainty.
 
 The first affirmation states that a blockchain, any at all, independently of the purpose or type, does indeed need a cryptocurrency. The second affirmation goes on a tangent from the first one, stating that maybe cryptocurrencies are only needed as an incentive, and otherwise could be not needed. The final affirmation is more generic in nature, and attempts to \textbf{completely separate the concept of blockchain and cryptocurrency}. The results for each affirmation can be found in Figure~\ref{fig:blockchain_crypto_opinions} and in Table~\ref{table:blockchain_crypto_opinions}.
 
