--- a/survey/survey3.tex
+++ b/survey/survey3.tex
@@ -58,7 +58,7 @@ The data collected from these questions and affirmations can be visualized in th
 Beginning with the analysis of the 2 questions:
 \begin{itemize}
   \item The first question had the objective of finding out whether Inventory Management is an important discipline for the efficiency of the supply chain, which is an important aspect, if it is to be treated as point of possible improvement. The data was ranked from 1 to 5, with 1 being "Not at all important" and 5 being "Very Important". The question scored a mean of 4.48, with the mode and median both being 5, since most results sit on that score. There is little dispersion in the results, with most of the other answers scoring a 4 and only 1 answer scoring a 3. It can be concluded that \textbf{Inventory Management is an essential discipline for supply chain management, according to the professionals.}
-  \item The second question tries to relate the absence of information with delays in the processes of sending products. The scale went from 0 to 10, which corresponded from the percentages 0 to 100\%. The final results ranged from 40\% to 90\%, with most of the answers sitting between 60\% and 80\%. The results were not very spread out, with a standard deviation of only 1.29, in the scale of 1 to 10. There weren't also any significant outlier values, with the skew being classified as normal, with a value below the treshold of the standard error. \textbf{The average result for this opinion was 68\%, which is a reasonably high percentage that we can say there might really be correlation between these 2 aspects, especially given the consensus and non-existance of outlier values. However, this can never be said with total certainty, since these are only opinions and not factual data}. 
+  \item The second question tries to relate the absence of information with delays in the processes of sending products. The scale went from 0 to 10, which corresponded from the percentages 0 to 100\%. The final results ranged from 40\% to 90\%, with most of the answers sitting between 60\% and 80\%. The results were not very spread out, with a standard deviation of only 1.29, in the scale of 1 to 10. There were not also any significant outlier values, with the skew being classified as normal, with a value below the treshold of the standard error. \textbf{The average result for this opinion was 68\%, which is a reasonably high percentage that we can say there might really be correlation between these 2 aspects, especially given the consensus and non-existance of outlier values. However, this can never be said with total certainty, since these are only opinions and not factual data}. 
 \end{itemize}
 %We know that Inventory management relates to lots of practices, and these are important
 
