--- a/thesis.tex
+++ b/thesis.tex
@@ -61,7 +61,7 @@
   \if!\ifnum9<1#1!\else_\fi
     \oldstylenums{#1}\else#1\fi}
 
-%% Fancy Headers -- Somehow, I can't seem to be able to move this to the .cls file
+%% Fancy Headers -- Somehow, I can not seem to be able to move this to the .cls file
 \pagestyle{fancy}
 \fancyhf{}
 \fancyhead[LE]{\small \leavevmode\llap{\textcolor{feup}{\isnum{\thepage}}\hspace{0.5cm}}\smallcaps{\leftmark}}
